eazy.output
State 4 conflicts: 1 shift/reduce
State 22 conflicts: 1 shift/reduce
State 53 conflicts: 16 shift/reduce
State 98 conflicts: 17 shift/reduce
State 159 conflicts: 29 reduce/reduce
State 165 conflicts: 1 reduce/reduce
State 215 conflicts: 1 reduce/reduce
State 419 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: cabecera_programa bloque_programa
    2         | error

    3 cabecera_programa: PROGRAMA IDENTIFICADOR '.' lista_librerias
    4                  | error

    5 lista_librerias: /* empty */
    6                | lista_librerias libreria

    7 libreria: IMPORTAR nombre_lista '.'
    8         | IMPORTAR nombre COMO IDENTIFICADOR '.'
    9         | error

   10 nombre_lista: nombre
   11             | nombre_lista ';' nombre

   12 nombre: IDENTIFICADOR
   13       | nombre PTOS IDENTIFICADOR

   14 bloque_programa: declaraciones_tipos_opt declaraciones_constantes_opt declaraciones_variables_opt lista_declaracion_funcion bloque_instrucciones

   15 declaraciones_tipos_opt: /* empty */
   16                        | declaraciones_tipos
   17                        | error

   18 declaraciones_tipos: TIPOS declaraciones_tipo_lista FIN

   19 declaraciones_tipo_lista: declaracion_tipo declaraciones_tipo_lista
   20                         | declaracion_tipo

   21 declaracion_tipo: visibilidad_opt IDENTIFICADOR ES lista_ref tipo_basico '.'
   22                 | visibilidad_opt IDENTIFICADOR ES lista_ref tipo_estructurado

   23 visibilidad_opt: /* empty */
   24                | PUBLICO
   25                | PROTEGIDO
   26                | PRIVADO

   27 lista_ref: /* empty */
   28          | lista_ref REF

   29 tipo_basico: nombre
   30            | tipo_escalar
   31            | tipo_tabla

   32 tipo_escalar: ENTERO
   33             | REAL
   34             | CARACTER
   35             | CADENA
   36             | FICHERO
   37             | EXCEPCION

   38 tipo_tabla: TABLA DE especificacion_tipo
   39           | TABLA HASH DE especificacion_tipo

   40 especificacion_tipo: lista_ref tipo_basico
   41                    | lista_ref tipo_estructurado

   42 tipo_estructurado: ENUMERACION DE tipo_escalar elemento_num_lista FIN
   43                  | ESTRUCTURA linea_campo_lista FIN
   44                  | UNION linea_campo_lista FIN
   45                  | CLASE ultima_opt '(' nombre_lista ')' componentes FIN
   46                  | CLASE ultima_opt componentes FIN

   47 ultima_opt: /* empty */
   48           | ULTIMA

   49 elemento_num_lista: elemento_enum ';' elemento_num_lista
   50                   | elemento_enum

   51 elemento_enum: IDENTIFICADOR ASIG expresion

   52 linea_campo_lista: linea_campo ';' linea_campo_lista
   53                  | linea_campo

   54 linea_campo: identificador_lista ES especificacion_tipo

   55 identificador_lista: identificador_lista ';' IDENTIFICADOR
   56                    | IDENTIFICADOR

   57 componentes: declaraciones_tipos_opt declaraciones_constantes_opt declaraciones_variables_opt declaracion_metodo_lista

   58 declaracion_metodo_lista: declaracion_metodo declaracion_metodo_lista
   59                         | declaracion_metodo

   60 declaracion_metodo: visibilidad_opt modificador_opt firma_funcion cuerpo_funcion

   61 modificador_opt: /* empty */
   62                | CONSTRUCTOR
   63                | DESTRUCTOR
   64                | GENERICO
   65                | ABSTRACTO
   66                | ESPECIFICO
   67                | FINAL

   68 declaraciones_constantes_opt: /* empty */
   69                             | declaraciones_constantes

   70 declaraciones_constantes_lista: declaraciones_constantes_lista declaracion_constantes
   71                               | declaracion_constantes

   72 declaraciones_constantes: CONSTANTES declaraciones_constantes_lista FIN

   73 declaracion_constantes: visibilidad_opt IDENTIFICADOR ES tipo_basico ASIG constante '.'

   74 constante: CTC_ENTERA
   75          | CTC_REAL
   76          | CTC_CARACTER
   77          | CTC_CADENA
   78          | constante_tabla
   79          | constante_estructurada

   80 constante_tabla: '(' lista_constante ')'
   81                | '(' lista_elemento_hash ')'

   82 lista_constante: /* empty */
   83                | constante ';' lista_constante

   84 lista_elemento_hash: elemento_hash ';' lista_elemento_hash
   85                    | elemento_hash

   86 elemento_hash: /* empty */
   87              | CTC_CADENA FLECHA_DCHA constante

   88 constante_estructurada: '(' campo_constante_lista ')'

   89 campo_constante_lista: campo_constante_lista ';' campo_constante
   90                      | campo_constante

   91 campo_constante: IDENTIFICADOR ASIG constante

   92 declaraciones_variables_opt: /* empty */
   93                            | declaraciones_variables

   94 declaraciones_variables: VARIABLES declaracion_variables_lista FIN

   95 declaracion_variables_lista: declaracion_variables_lista declaracion_variables
   96                            | declaracion_variables

   97 declaracion_variables: visibilidad_opt identificador_lista ES especificacion_tipo ASIG expresion_lista '.'
   98                      | visibilidad_opt identificador_lista ES especificacion_tipo '.'

   99 lista_declaracion_funcion: lista_declaracion_funcion declaracion_funcion
  100                          | /* empty */

  101 declaracion_funcion: visibilidad_opt firma_funcion cuerpo_funcion
  102                    | error

  103 firma_funcion: FUNCION IDENTIFICADOR '(' parametros_lista ')' FLECHA_DCHA tipo_salida
  104              | FUNCION IDENTIFICADOR FLECHA_DCHA tipo_salida

  105 parametros_lista: parametros_lista ';' parametros
  106                 | parametros

  107 parametros: identificador_lista ES especificacion_tipo ASIG expresion_constante_lista
  108           | identificador_lista ES especificacion_tipo

  109 expresion_constante_lista: expresion_constante_lista ';' expresion_constante
  110                          | expresion_constante

  111 tipo_salida: especificacion_tipo
  112            | NADA

  113 cuerpo_funcion: declaraciones_constantes_opt declaraciones_variables_opt lista_declaracion_funcion bloque_instrucciones

  114 bloque_instrucciones: PRINCIPIO instruccion_lista FIN

  115 instruccion_lista: instruccion_lista instruccion
  116                  | instruccion

  117 instruccion: instruccion_expresion
  118            | instruccion_bifurcacion
  119            | instruccion_bucle
  120            | instruccion_salto
  121            | instruccion_destino_salto
  122            | instruccion_devolver
  123            | instruccion_lanzamiento_excepcion
  124            | instruccion_captura_excepcion
  125            | instruccion_vacia
  126            | error

  127 instruccion_expresion: expresion_funcional '.'
  128                      | asignacion '.'

  129 asignacion: expresion_indexada operador_asignacion expresion

  130 operador_asignacion: ASIG
  131                    | SUMA_ASIG
  132                    | RESTA_ASIG
  133                    | MULT_ASIG
  134                    | DIV_ASIG
  135                    | MOD_ASIG
  136                    | POT_ASIG
  137                    | FI_ASIG
  138                    | FD_ASIG
  139                    | AND_ASIG
  140                    | XOR_ASIG
  141                    | OR_ASIG

  142 instruccion_bifurcacion: SI '(' expresion ')' bloque_instrucciones lista_otro_caso SINO bloque_instrucciones
  143                        | SI '(' expresion ')' bloque_instrucciones lista_otro_caso

  144 lista_otro_caso: lista_otro_caso otro_caso
  145                | /* empty */

  146 otro_caso: ENCAMBIO '(' expresion ')' bloque_instrucciones

  147 instruccion_bucle: MIENTRAS '(' expresion ')' bloque_instrucciones
  148                  | HACER bloque_instrucciones MIENTRAS '(' expresion ')' '.'
  149                  | PARA '(' asignacion_lista ':' expresion ':' asignacion_lista ')' bloque_instrucciones
  150                  | PARA CADA IDENTIFICADOR EN '(' expresion ')' bloque_instrucciones

  151 asignacion_lista: asignacion_lista ';' asignacion
  152                 | asignacion

  153 instruccion_salto: SALTAR IDENTIFICADOR '.'
  154                  | CONTINUAR '.'
  155                  | ESCAPE '.'

  156 instruccion_destino_salto: ETIQUETA IDENTIFICADOR '.'

  157 instruccion_devolver: DEVOLVER expresion '.'
  158                     | DEVOLVER '.'

  159 instruccion_lanzamiento_excepcion: LANZA EXCEPCION IDENTIFICADOR '.'

  160 instruccion_captura_excepcion: EJECUTA bloque_instrucciones clausulas

  161 clausulas: clausulas_excepcion clausula_defecto
  162          | clausulas_excepcion
  163          | clausula_defecto

  164 clausulas_excepcion: lista_clausula_excepcion_especifica clausula_excepcion_general

  165 lista_clausula_excepcion_especifica: /* empty */
  166                                    | lista_clausula_excepcion_especifica clausula_excepcion_especifica

  167 clausula_excepcion_especifica: EXCEPCION nombre bloque_instrucciones

  168 clausula_excepcion_general: OTRA EXCEPCION bloque_instrucciones

  169 clausula_defecto: DEFECTO bloque_instrucciones

  170 instruccion_vacia: /* empty */

  171 indice: '[' expresion ']'
  172       | '{' expresion '}'

  173 expresion: expresion_logica_or
  174          | expresion_logica_or SI expresion SINO expresion
  175          | expresion_logica_or PARA CADA IDENTIFICADOR EN expresion

  176 expresion_logica_or: expresion_logica_and
  177                    | expresion_logica_or OR expresion_logica_and

  178 expresion_logica_and: expresion_igualdad
  179                     | expresion_logica_and AND expresion_igualdad

  180 expresion_igualdad: expresion_comparacion EQ expresion_comparacion
  181                   | expresion_comparacion NEQ expresion_comparacion
  182                   | expresion_comparacion

  183 expresion_comparacion: expresion_or_binario '<' expresion_or_binario
  184                      | expresion_or_binario '>' expresion_or_binario
  185                      | expresion_or_binario LE expresion_or_binario
  186                      | expresion_or_binario GE expresion_or_binario
  187                      | expresion_or_binario

  188 expresion_or_binario: expresion_xor_binario '|' expresion_xor_binario
  189                     | expresion_xor_binario

  190 expresion_xor_binario: expresion_and_binario '@' expresion_and_binario
  191                      | expresion_and_binario

  192 expresion_and_binario: expresion_desplazamiento '&' expresion_desplazamiento
  193                      | expresion_desplazamiento

  194 expresion_desplazamiento: expresion_aditiva
  195                         | expresion_desplazamiento FLECHA_IZDA expresion_aditiva
  196                         | expresion_desplazamiento FLECHA_DCHA expresion_aditiva

  197 expresion_aditiva: expresion_multiplicativa
  198                  | expresion_aditiva '+' expresion_multiplicativa
  199                  | expresion_aditiva '-' expresion_multiplicativa

  200 expresion_multiplicativa: expresion_potencia
  201                         | expresion_multiplicativa '*' expresion_potencia
  202                         | expresion_multiplicativa '/' expresion_potencia
  203                         | expresion_multiplicativa MOD expresion_potencia

  204 expresion_potencia: expresion_unaria
  205                   | expresion_unaria POTENCIA expresion_potencia

  206 expresion_unaria: '-' expresion_primitiva
  207                 | '~' expresion_primitiva
  208                 | '!' expresion_primitiva
  209                 | TAMANO expresion_primitiva
  210                 | expresion_primitiva

  211 expresion_primitiva: expresion_funcional
  212                    | expresion_indexada
  213                    | expresion_basica
  214                    | expresion_constante
  215                    | error

  216 expresion_funcional: IDENTIFICADOR '(' opt_expresion_lista ')'

  217 opt_expresion_lista: /* empty */
  218                    | lista_expresiones

  219 expresion_lista: lista_expresiones ';' expresion
  220                | expresion

  221 lista_expresiones: /* empty */
  222                  | lista_expresiones ';' expresion

  223 expresion_indexada: expresion_basica
  224                   | expresion_indexada '?' expresion_basica
  225                   | expresion_indexada INDIRECCION expresion_basica
  226                   | expresion_indexada INDIRECCION indice
  227                   | expresion_indexada indice

  228 expresion_basica: nombre
  229                 | '(' expresion ')'
  230                 | '^' expresion_basica
  231                 | REF expresion_basica

  232 expresion_constante: CTC_ENTERA
  233                    | CTC_REAL
  234                    | CTC_CARACTER
  235                    | CTC_CADENA


Terminals, with rules where they appear

$end (0) 0
'!' (33) 208
'&' (38) 192
'(' (40) 45 80 81 88 103 142 143 146 147 148 149 150 216 229
')' (41) 45 80 81 88 103 142 143 146 147 148 149 150 216 229
'*' (42) 201
'+' (43) 198
'-' (45) 199 206
'.' (46) 3 7 8 21 73 97 98 127 128 148 153 154 155 156 157 158 159
'/' (47) 202
':' (58) 149
';' (59) 11 49 52 55 83 84 89 105 109 151 219 222
'<' (60) 183
'>' (62) 184
'?' (63) 224
'@' (64) 190
'[' (91) 171
']' (93) 171
'^' (94) 230
'{' (123) 172
'|' (124) 188
'}' (125) 172
'~' (126) 207
error (256) 2 4 9 17 102 126 215
ABSTRACTO (258) 65
AND (259) 179
ASIG (260) 51 73 91 97 107 130
AND_ASIG (261) 139
CADA (262) 150 175
CADENA (263) 35
CARACTER (264) 34
CLASE (265) 45 46
COMO (266) 8
CONSTANTES (267) 72
CONSTRUCTOR (268) 62
CONTINUAR (269) 154
CTC_CADENA (270) 77 87 235
CTC_CARACTER (271) 76 234
CTC_ENTERA (272) 74 232
CTC_REAL (273) 75 233
DE (274) 38 39 42
DEFECTO (275) 169
DESTRUCTOR (276) 63
DEVOLVER (277) 157 158
DIV_ASIG (278) 134
EJECUTA (279) 160
ENCAMBIO (280) 146
ENTERO (281) 32
ENUMERACION (282) 42
EQ (283) 180
EN (284) 150 175
ES (285) 21 22 54 73 97 98 107 108
ESCAPE (286) 155
ESPECIFICO (287) 66
ESTRUCTURA (288) 43
ETIQUETA (289) 156
EXCEPCION (290) 37 159 167 168
FD_ASIG (291) 138
FI_ASIG (292) 137
FICHERO (293) 36
FIN (294) 18 42 43 44 45 46 72 94 114
FINAL (295) 67
FLECHA_DCHA (296) 87 103 104 196
FLECHA_IZDA (297) 195
FUNCION (298) 103 104
GENERICO (299) 64
HACER (300) 148
HASH (301) 39
GE (302) 186
IDENTIFICADOR (303) 3 8 12 13 21 22 51 55 56 73 91 103 104 150 153
    156 159 175 216
IMPORTAR (304) 7 8
INDIRECCION (305) 225 226
LANZA (306) 159
LE (307) 185
MIENTRAS (308) 147 148
MOD (309) 203
MOD_ASIG (310) 135
MULT_ASIG (311) 133
NADA (312) 112
NEQ (313) 181
OR (314) 177
OTRA (315) 168
OR_ASIG (316) 141
PARA (317) 149 150 175
POT_ASIG (318) 136
POTENCIA (319) 205
PRINCIPIO (320) 114
PRIVADO (321) 26
PROGRAMA (322) 3
PROTEGIDO (323) 25
PTOS (324) 13
PUBLICO (325) 24
REAL (326) 33
REF (327) 28 231
RESTA_ASIG (328) 132
SALTAR (329) 153
SI (330) 142 143 174
SINO (331) 142 174
SUMA_ASIG (332) 131
TAMANO (333) 209
TABLA (334) 38 39
TIPOS (335) 18
ULTIMA (336) 48
UNION (337) 44
VARIABLES (338) 94
XOR_ASIG (339) 140


Nonterminals, with rules where they appear

$accept (107)
    on left: 0
programa (108)
    on left: 1 2, on right: 0
cabecera_programa (109)
    on left: 3 4, on right: 1
lista_librerias (110)
    on left: 5 6, on right: 3 6
libreria (111)
    on left: 7 8 9, on right: 6
nombre_lista (112)
    on left: 10 11, on right: 7 11 45
nombre (113)
    on left: 12 13, on right: 8 10 11 13 29 167 228
bloque_programa (114)
    on left: 14, on right: 1
declaraciones_tipos_opt (115)
    on left: 15 16 17, on right: 14 57
declaraciones_tipos (116)
    on left: 18, on right: 16
declaraciones_tipo_lista (117)
    on left: 19 20, on right: 18 19
declaracion_tipo (118)
    on left: 21 22, on right: 19 20
visibilidad_opt (119)
    on left: 23 24 25 26, on right: 21 22 60 73 97 98 101
lista_ref (120)
    on left: 27 28, on right: 21 22 28 40 41
tipo_basico (121)
    on left: 29 30 31, on right: 21 40 73
tipo_escalar (122)
    on left: 32 33 34 35 36 37, on right: 30 42
tipo_tabla (123)
    on left: 38 39, on right: 31
especificacion_tipo (124)
    on left: 40 41, on right: 38 39 54 97 98 107 108 111
tipo_estructurado (125)
    on left: 42 43 44 45 46, on right: 22 41
ultima_opt (126)
    on left: 47 48, on right: 45 46
elemento_num_lista (127)
    on left: 49 50, on right: 42 49
elemento_enum (128)
    on left: 51, on right: 49 50
linea_campo_lista (129)
    on left: 52 53, on right: 43 44 52
linea_campo (130)
    on left: 54, on right: 52 53
identificador_lista (131)
    on left: 55 56, on right: 54 55 97 98 107 108
componentes (132)
    on left: 57, on right: 45 46
declaracion_metodo_lista (133)
    on left: 58 59, on right: 57 58
declaracion_metodo (134)
    on left: 60, on right: 58 59
modificador_opt (135)
    on left: 61 62 63 64 65 66 67, on right: 60
declaraciones_constantes_opt (136)
    on left: 68 69, on right: 14 57 113
declaraciones_constantes_lista (137)
    on left: 70 71, on right: 70 72
declaraciones_constantes (138)
    on left: 72, on right: 69
declaracion_constantes (139)
    on left: 73, on right: 70 71
constante (140)
    on left: 74 75 76 77 78 79, on right: 73 83 87 91
constante_tabla (141)
    on left: 80 81, on right: 78
lista_constante (142)
    on left: 82 83, on right: 80 83
lista_elemento_hash (143)
    on left: 84 85, on right: 81 84
elemento_hash (144)
    on left: 86 87, on right: 84 85
constante_estructurada (145)
    on left: 88, on right: 79
campo_constante_lista (146)
    on left: 89 90, on right: 88 89
campo_constante (147)
    on left: 91, on right: 89 90
declaraciones_variables_opt (148)
    on left: 92 93, on right: 14 57 113
declaraciones_variables (149)
    on left: 94, on right: 93
declaracion_variables_lista (150)
    on left: 95 96, on right: 94 95
declaracion_variables (151)
    on left: 97 98, on right: 95 96
lista_declaracion_funcion (152)
    on left: 99 100, on right: 14 99 113
declaracion_funcion (153)
    on left: 101 102, on right: 99
firma_funcion (154)
    on left: 103 104, on right: 60 101
parametros_lista (155)
    on left: 105 106, on right: 103 105
parametros (156)
    on left: 107 108, on right: 105 106
expresion_constante_lista (157)
    on left: 109 110, on right: 107 109
tipo_salida (158)
    on left: 111 112, on right: 103 104
cuerpo_funcion (159)
    on left: 113, on right: 60 101
bloque_instrucciones (160)
    on left: 114, on right: 14 113 142 143 146 147 148 149 150 160
    167 168 169
instruccion_lista (161)
    on left: 115 116, on right: 114 115
instruccion (162)
    on left: 117 118 119 120 121 122 123 124 125 126,
    on right: 115 116
instruccion_expresion (163)
    on left: 127 128, on right: 117
asignacion (164)
    on left: 129, on right: 128 151 152
operador_asignacion (165)
    on left: 130 131 132 133 134 135 136 137 138 139 140 141,
    on right: 129
instruccion_bifurcacion (166)
    on left: 142 143, on right: 118
lista_otro_caso (167)
    on left: 144 145, on right: 142 143 144
otro_caso (168)
    on left: 146, on right: 144
instruccion_bucle (169)
    on left: 147 148 149 150, on right: 119
asignacion_lista (170)
    on left: 151 152, on right: 149 151
instruccion_salto (171)
    on left: 153 154 155, on right: 120
instruccion_destino_salto (172)
    on left: 156, on right: 121
instruccion_devolver (173)
    on left: 157 158, on right: 122
instruccion_lanzamiento_excepcion (174)
    on left: 159, on right: 123
instruccion_captura_excepcion (175)
    on left: 160, on right: 124
clausulas (176)
    on left: 161 162 163, on right: 160
clausulas_excepcion (177)
    on left: 164, on right: 161 162
lista_clausula_excepcion_especifica (178)
    on left: 165 166, on right: 164 166
clausula_excepcion_especifica (179)
    on left: 167, on right: 166
clausula_excepcion_general (180)
    on left: 168, on right: 164
clausula_defecto (181)
    on left: 169, on right: 161 163
instruccion_vacia (182)
    on left: 170, on right: 125
indice (183)
    on left: 171 172, on right: 226 227
expresion (184)
    on left: 173 174 175, on right: 51 129 142 143 146 147 148 149
    150 157 171 172 174 175 219 220 222 229
expresion_logica_or (185)
    on left: 176 177, on right: 173 174 175 177
expresion_logica_and (186)
    on left: 178 179, on right: 176 177 179
expresion_igualdad (187)
    on left: 180 181 182, on right: 178 179
expresion_comparacion (188)
    on left: 183 184 185 186 187, on right: 180 181 182
expresion_or_binario (189)
    on left: 188 189, on right: 183 184 185 186 187
expresion_xor_binario (190)
    on left: 190 191, on right: 188 189
expresion_and_binario (191)
    on left: 192 193, on right: 190 191
expresion_desplazamiento (192)
    on left: 194 195 196, on right: 192 193 195 196
expresion_aditiva (193)
    on left: 197 198 199, on right: 194 195 196 198 199
expresion_multiplicativa (194)
    on left: 200 201 202 203, on right: 197 198 199 201 202 203
expresion_potencia (195)
    on left: 204 205, on right: 200 201 202 203 205
expresion_unaria (196)
    on left: 206 207 208 209 210, on right: 204 205
expresion_primitiva (197)
    on left: 211 212 213 214 215, on right: 206 207 208 209 210
expresion_funcional (198)
    on left: 216, on right: 127 211
opt_expresion_lista (199)
    on left: 217 218, on right: 216
expresion_lista (200)
    on left: 219 220, on right: 97
lista_expresiones (201)
    on left: 221 222, on right: 218 219 222
expresion_indexada (202)
    on left: 223 224 225 226 227, on right: 129 212 224 225 226 227
expresion_basica (203)
    on left: 228 229 230 231, on right: 213 223 224 225 230 231
expresion_constante (204)
    on left: 232 233 234 235, on right: 109 110 214


state 0

    0 $accept: . programa $end

    error     shift, and go to state 1
    PROGRAMA  shift, and go to state 2

    programa           go to state 3
    cabecera_programa  go to state 4


state 1

    2 programa: error .
    4 cabecera_programa: error .

    $end      reduce using rule 2 (programa)
    $default  reduce using rule 4 (cabecera_programa)


state 2

    3 cabecera_programa: PROGRAMA . IDENTIFICADOR '.' lista_librerias

    IDENTIFICADOR  shift, and go to state 5


state 3

    0 $accept: programa . $end

    $end  shift, and go to state 6


state 4

    1 programa: cabecera_programa . bloque_programa

    error  shift, and go to state 7
    TIPOS  shift, and go to state 8

    error       [reduce using rule 15 (declaraciones_tipos_opt)]
    CONSTANTES  reduce using rule 15 (declaraciones_tipos_opt)
    FUNCION     reduce using rule 15 (declaraciones_tipos_opt)
    PRINCIPIO   reduce using rule 15 (declaraciones_tipos_opt)
    PRIVADO     reduce using rule 15 (declaraciones_tipos_opt)
    PROTEGIDO   reduce using rule 15 (declaraciones_tipos_opt)
    PUBLICO     reduce using rule 15 (declaraciones_tipos_opt)
    VARIABLES   reduce using rule 15 (declaraciones_tipos_opt)

    bloque_programa          go to state 9
    declaraciones_tipos_opt  go to state 10
    declaraciones_tipos      go to state 11


state 5

    3 cabecera_programa: PROGRAMA IDENTIFICADOR . '.' lista_librerias

    '.'  shift, and go to state 12


state 6

    0 $accept: programa $end .

    $default  accept


state 7

   17 declaraciones_tipos_opt: error .

    $default  reduce using rule 17 (declaraciones_tipos_opt)


state 8

   18 declaraciones_tipos: TIPOS . declaraciones_tipo_lista FIN

    PRIVADO    shift, and go to state 13
    PROTEGIDO  shift, and go to state 14
    PUBLICO    shift, and go to state 15

    $default  reduce using rule 23 (visibilidad_opt)

    declaraciones_tipo_lista  go to state 16
    declaracion_tipo          go to state 17
    visibilidad_opt           go to state 18


state 9

    1 programa: cabecera_programa bloque_programa .

    $default  reduce using rule 1 (programa)


state 10

   14 bloque_programa: declaraciones_tipos_opt . declaraciones_constantes_opt declaraciones_variables_opt lista_declaracion_funcion bloque_instrucciones

    CONSTANTES  shift, and go to state 19

    $default  reduce using rule 68 (declaraciones_constantes_opt)

    declaraciones_constantes_opt  go to state 20
    declaraciones_constantes      go to state 21


state 11

   16 declaraciones_tipos_opt: declaraciones_tipos .

    $default  reduce using rule 16 (declaraciones_tipos_opt)


state 12

    3 cabecera_programa: PROGRAMA IDENTIFICADOR '.' . lista_librerias

    $default  reduce using rule 5 (lista_librerias)

    lista_librerias  go to state 22


state 13

   26 visibilidad_opt: PRIVADO .

    $default  reduce using rule 26 (visibilidad_opt)


state 14

   25 visibilidad_opt: PROTEGIDO .

    $default  reduce using rule 25 (visibilidad_opt)


state 15

   24 visibilidad_opt: PUBLICO .

    $default  reduce using rule 24 (visibilidad_opt)


state 16

   18 declaraciones_tipos: TIPOS declaraciones_tipo_lista . FIN

    FIN  shift, and go to state 23


state 17

   19 declaraciones_tipo_lista: declaracion_tipo . declaraciones_tipo_lista
   20                         | declaracion_tipo .

    PRIVADO    shift, and go to state 13
    PROTEGIDO  shift, and go to state 14
    PUBLICO    shift, and go to state 15

    IDENTIFICADOR  reduce using rule 23 (visibilidad_opt)
    $default       reduce using rule 20 (declaraciones_tipo_lista)

    declaraciones_tipo_lista  go to state 24
    declaracion_tipo          go to state 17
    visibilidad_opt           go to state 18


state 18

   21 declaracion_tipo: visibilidad_opt . IDENTIFICADOR ES lista_ref tipo_basico '.'
   22                 | visibilidad_opt . IDENTIFICADOR ES lista_ref tipo_estructurado

    IDENTIFICADOR  shift, and go to state 25


state 19

   72 declaraciones_constantes: CONSTANTES . declaraciones_constantes_lista FIN

    PRIVADO    shift, and go to state 13
    PROTEGIDO  shift, and go to state 14
    PUBLICO    shift, and go to state 15

    $default  reduce using rule 23 (visibilidad_opt)

    visibilidad_opt                 go to state 26
    declaraciones_constantes_lista  go to state 27
    declaracion_constantes          go to state 28


state 20

   14 bloque_programa: declaraciones_tipos_opt declaraciones_constantes_opt . declaraciones_variables_opt lista_declaracion_funcion bloque_instrucciones

    VARIABLES  shift, and go to state 29

    $default  reduce using rule 92 (declaraciones_variables_opt)

    declaraciones_variables_opt  go to state 30
    declaraciones_variables      go to state 31


state 21

   69 declaraciones_constantes_opt: declaraciones_constantes .

    $default  reduce using rule 69 (declaraciones_constantes_opt)


state 22

    3 cabecera_programa: PROGRAMA IDENTIFICADOR '.' lista_librerias .
    6 lista_librerias: lista_librerias . libreria

    error     shift, and go to state 32
    IMPORTAR  shift, and go to state 33

    error       [reduce using rule 3 (cabecera_programa)]
    CONSTANTES  reduce using rule 3 (cabecera_programa)
    FUNCION     reduce using rule 3 (cabecera_programa)
    PRINCIPIO   reduce using rule 3 (cabecera_programa)
    PRIVADO     reduce using rule 3 (cabecera_programa)
    PROTEGIDO   reduce using rule 3 (cabecera_programa)
    PUBLICO     reduce using rule 3 (cabecera_programa)
    TIPOS       reduce using rule 3 (cabecera_programa)
    VARIABLES   reduce using rule 3 (cabecera_programa)

    libreria  go to state 34


state 23

   18 declaraciones_tipos: TIPOS declaraciones_tipo_lista FIN .

    $default  reduce using rule 18 (declaraciones_tipos)


state 24

   19 declaraciones_tipo_lista: declaracion_tipo declaraciones_tipo_lista .

    $default  reduce using rule 19 (declaraciones_tipo_lista)


state 25

   21 declaracion_tipo: visibilidad_opt IDENTIFICADOR . ES lista_ref tipo_basico '.'
   22                 | visibilidad_opt IDENTIFICADOR . ES lista_ref tipo_estructurado

    ES  shift, and go to state 35


state 26

   73 declaracion_constantes: visibilidad_opt . IDENTIFICADOR ES tipo_basico ASIG constante '.'

    IDENTIFICADOR  shift, and go to state 36


state 27

   70 declaraciones_constantes_lista: declaraciones_constantes_lista . declaracion_constantes
   72 declaraciones_constantes: CONSTANTES declaraciones_constantes_lista . FIN

    FIN        shift, and go to state 37
    PRIVADO    shift, and go to state 13
    PROTEGIDO  shift, and go to state 14
    PUBLICO    shift, and go to state 15

    $default  reduce using rule 23 (visibilidad_opt)

    visibilidad_opt         go to state 26
    declaracion_constantes  go to state 38


state 28

   71 declaraciones_constantes_lista: declaracion_constantes .

    $default  reduce using rule 71 (declaraciones_constantes_lista)


state 29

   94 declaraciones_variables: VARIABLES . declaracion_variables_lista FIN

    PRIVADO    shift, and go to state 13
    PROTEGIDO  shift, and go to state 14
    PUBLICO    shift, and go to state 15

    $default  reduce using rule 23 (visibilidad_opt)

    visibilidad_opt              go to state 39
    declaracion_variables_lista  go to state 40
    declaracion_variables        go to state 41


state 30

   14 bloque_programa: declaraciones_tipos_opt declaraciones_constantes_opt declaraciones_variables_opt . lista_declaracion_funcion bloque_instrucciones

    $default  reduce using rule 100 (lista_declaracion_funcion)

    lista_declaracion_funcion  go to state 42


state 31

   93 declaraciones_variables_opt: declaraciones_variables .

    $default  reduce using rule 93 (declaraciones_variables_opt)


state 32

    9 libreria: error .

    $default  reduce using rule 9 (libreria)


state 33

    7 libreria: IMPORTAR . nombre_lista '.'
    8         | IMPORTAR . nombre COMO IDENTIFICADOR '.'

    IDENTIFICADOR  shift, and go to state 43

    nombre_lista  go to state 44
    nombre        go to state 45


state 34

    6 lista_librerias: lista_librerias libreria .

    $default  reduce using rule 6 (lista_librerias)


state 35

   21 declaracion_tipo: visibilidad_opt IDENTIFICADOR ES . lista_ref tipo_basico '.'
   22                 | visibilidad_opt IDENTIFICADOR ES . lista_ref tipo_estructurado

    $default  reduce using rule 27 (lista_ref)

    lista_ref  go to state 46


state 36

   73 declaracion_constantes: visibilidad_opt IDENTIFICADOR . ES tipo_basico ASIG constante '.'

    ES  shift, and go to state 47


state 37

   72 declaraciones_constantes: CONSTANTES declaraciones_constantes_lista FIN .

    $default  reduce using rule 72 (declaraciones_constantes)


state 38

   70 declaraciones_constantes_lista: declaraciones_constantes_lista declaracion_constantes .

    $default  reduce using rule 70 (declaraciones_constantes_lista)


state 39

   97 declaracion_variables: visibilidad_opt . identificador_lista ES especificacion_tipo ASIG expresion_lista '.'
   98                      | visibilidad_opt . identificador_lista ES especificacion_tipo '.'

    IDENTIFICADOR  shift, and go to state 48

    identificador_lista  go to state 49


state 40

   94 declaraciones_variables: VARIABLES declaracion_variables_lista . FIN
   95 declaracion_variables_lista: declaracion_variables_lista . declaracion_variables

    FIN        shift, and go to state 50
    PRIVADO    shift, and go to state 13
    PROTEGIDO  shift, and go to state 14
    PUBLICO    shift, and go to state 15

    $default  reduce using rule 23 (visibilidad_opt)

    visibilidad_opt        go to state 39
    declaracion_variables  go to state 51


state 41

   96 declaracion_variables_lista: declaracion_variables .

    $default  reduce using rule 96 (declaracion_variables_lista)


state 42

   14 bloque_programa: declaraciones_tipos_opt declaraciones_constantes_opt declaraciones_variables_opt lista_declaracion_funcion . bloque_instrucciones
   99 lista_declaracion_funcion: lista_declaracion_funcion . declaracion_funcion

    error      shift, and go to state 52
    PRINCIPIO  shift, and go to state 53
    PRIVADO    shift, and go to state 13
    PROTEGIDO  shift, and go to state 14
    PUBLICO    shift, and go to state 15

    FUNCION  reduce using rule 23 (visibilidad_opt)

    visibilidad_opt       go to state 54
    declaracion_funcion   go to state 55
    bloque_instrucciones  go to state 56


state 43

   12 nombre: IDENTIFICADOR .

    $default  reduce using rule 12 (nombre)


state 44

    7 libreria: IMPORTAR nombre_lista . '.'
   11 nombre_lista: nombre_lista . ';' nombre

    '.'  shift, and go to state 57
    ';'  shift, and go to state 58


state 45

    8 libreria: IMPORTAR nombre . COMO IDENTIFICADOR '.'
   10 nombre_lista: nombre .
   13 nombre: nombre . PTOS IDENTIFICADOR

    COMO  shift, and go to state 59
    PTOS  shift, and go to state 60

    $default  reduce using rule 10 (nombre_lista)


state 46

   21 declaracion_tipo: visibilidad_opt IDENTIFICADOR ES lista_ref . tipo_basico '.'
   22                 | visibilidad_opt IDENTIFICADOR ES lista_ref . tipo_estructurado
   28 lista_ref: lista_ref . REF

    CADENA         shift, and go to state 61
    CARACTER       shift, and go to state 62
    CLASE          shift, and go to state 63
    ENTERO         shift, and go to state 64
    ENUMERACION    shift, and go to state 65
    ESTRUCTURA     shift, and go to state 66
    EXCEPCION      shift, and go to state 67
    FICHERO        shift, and go to state 68
    IDENTIFICADOR  shift, and go to state 43
    REAL           shift, and go to state 69
    REF            shift, and go to state 70
    TABLA          shift, and go to state 71
    UNION          shift, and go to state 72

    nombre             go to state 73
    tipo_basico        go to state 74
    tipo_escalar       go to state 75
    tipo_tabla         go to state 76
    tipo_estructurado  go to state 77


state 47
